<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FOBBU</string>
    <string name="google_maps_key">AIzaSyArlc6_7Tbs99zHLJH6BT3oUz3us9nDkSs</string>
    <string name="try_fobbu">Try Fobbu</string>
    <string name="rsa">RSA</string>
    <string name="rsa_fullform">( Road Side Assistance )</string>
    <string name="rsa_tutorial_text">on road, at home, at work, or on travel\nnever be stranded…</string>
    <string name="ods">ODS</string>
    <string name="ods_liveTrack">ODS Live Track</string>
    <string name="ods_fullform">( On Demand Services )</string>
    <string name="ods_tutorial_text">turn your Vehicle repair/service into\ntap driven experience, effective and fun…
    </string>
    <string name="lsd">Lsd</string>
    <string name="lsd_fullform">( Local Steal Deals )</string>
    <string name="lsd_tutorial_text">big savings from tons of local offers and\ndiscount customized only for you…
    </string>
    <string name="keep_driving">Keep Driving, be Safe…</string>
    <string name="keep_driving_text">ready to experience the whole new\nway you drive your vehicle ?</string>
    <string name="splash_text">Help when you need it!</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile No.</string>
    <string name="password">Password</string>
    <string name="start_your_fobbu">Start your Fobbu</string>
    <string name="no_of">No of " "</string>
    <string name="forgot_password_ques">
        <u>Forgot Password ?</u>
    </string>
    <string name="please_enter_mobile">Please enter Mobile no.</string>
    <string name="please_enter_password">Please enter Password.</string>
    <string name="please_enter_valid_password">Minimum 6 character should be there in password field.</string>
    <string name="signup">Sign Up</string>
    <string name="email_id">Email ID</string>
    <string name="already_registered">
        <u>Already Registered?</u>
    </string>
    <string name="by_signing_up">By Signing up, you agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="please_enter_full_name">Please enter full Name.</string>
    <string name="please_enter_email">Please enter Email ID.</string>
    <string name="correct_email_error">Please enter valid Email</string>
    <string name="selectGender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>
    <string name="not_specified">Not specified</string>
    <string name="other">other</string>
    <string name="please_enter_gender">Please select Gender.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="confirm" tools:ignore="ExtraTranslation">Confirm</string>
    <string name="we_verifying">We are verifying your mobile no.</string>
    <string name="in_case_auto">In case the auto verification fails, you can manually enter the 4 digit OTP Sent on your
        mobile no.
    </string>
    <string name="resend_code">
        <u>Resend Code</u>
    </string>
    <string name="sms_success">OTP verified successfully.</string>
    <string name="sms_fail">Wrong OTP. Please try again.</string>
    <string name="generate_pin">Generate PIN</string>
    <string name="please_generate">Please generate a new pin\n for your Fobbu mobile app.</string>
    <string name="generate">Generate</string>
    <string name="do_it_later">
        <u>Do it Later</u>
    </string>
    <string name="succesfully_set_pin">PIN Set Successfully.</string>
    <string name="pin_dont_match">PIN didn\'t match. Please try again</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="my_orders">My Orders</string>
    <string name="my_passbook">My Passbook</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="freebies">Freebies</string>
    <string name="help">Help</string>
    <string name="security_settings">Security Settings</string>
    <string name="logout">Logout</string>
    <string name="membership_id">Membership ID:</string>
    <string name="fobbu_pay">Fobbu Pay</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="add_money">Add Money</string>
    <string name="cashback">CASH BACK</string>
    <string name="your_membership_id">Your Membership ID is</string>
    <string name="killer_saving">Killer Savings</string>
    <string name="customized_only_for_u">Customized only for you…</string>
    <string name="rsa_text">Road Side\nAssistance</string>
    <string name="ods_text">On Demand\nServices</string>
    <string name="lsd_text">Local Steal\nDeals</string>
    <string name="new_text">New</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="vehicle_reg_no">Vehicle Reg. No.</string>
    <string name="vehicle_sub_model">Sub Model</string>
    <string name="year_of_make">Year of Make</string>
    <string name="upload_pics">Upload Pics</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_vehicles">Your Vehicles</string>
    <string name="add_brand">Please add vehicle brand</string>
    <string name="add_reg_no">Please add vehicle registration number</string>
    <string name="add_sub_model">Please add sub model</string>
    <string name="add_year">Please add year of make</string>
    <string name="add_vehicle_type">Please add vehicle type</string>
    <string name="add_another_vehicle">Add Another Vehicle</string>
    <string name="flat_tyre">Flat\nTyre</string>
    <string name="battery_jump">Battery\nJump Start</string>
    <string name="vehicle_emergency">Vehicle\nEmergency</string>
    <string name="rsa_textt">Road Side Assistance</string>
    <string name="select_service_request">Please select your service request</string>
    <string name="whats_keeping_stranded">What\'s keeping you stranded ?</string>
    <string name="hello">Hello</string>
    <string name="flat_tyre_worries">Flat Tyre? No Worries</string>
    <string name="burst_tyre_worries">Burst Tyre? No Worries</string>
    <string name="few_pics_please">Few pics please !</string>
    <string name="mind_it_upload">Mind it you upload your vehicle pics :)</string>
    <string name="double_trouble">Double Trouble ! No worries</string>
    <string name="dead_battery_worries">Dead Battery? No Worries</string>
    <string name="empty_tanks_worries">Empty Tank? No Worries</string>
    <string name="deliver_real_quick">we will deliver real quick !</string>
    <string name="jump_start">We will jumpstart in a flash!</string>
    <string name="bike_scooter">Bike/Scooter</string>
    <string name="petrol">(Petrol)</string>
    <string name="diesel">(Diesel)</string>
    <string name="car_suv">Car/Suv</string>
    <string name="fix_on_the_spot">We will fix it on the spot…</string>
    <string name="help_you_fix">We help you fix it !</string>
    <string name="we_will_connect_towing">We will connect you to our towing partner</string>
    <string name="enter_vehicle_no">Enter Vehicle No.</string>
    <string name="find_fobbu">Find Fobbu</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="upload_vehicle">Upload Vehicle Pics</string>
    <string name="please_wait">Please wait…</string>
    <string name="finding_fobbu_for_u">we are finding a Fobbu for you</string>
    <string name="awesome">Awesome</string>
    <string name="awesome_exclamatory">Awesome!</string>
    <string name="fobbu_found">Fobbu has been found!</string>
    <string name="wonderful">Wonderful…</string>
    <string name="fobbu_confirmed_request">Fobbu has confirmed your request!</string>
    <string name="fobbu_gathering_tools">While Fobbu is gathering tools it is strongly\nrecommended to Add your
        Vehicle
    </string>
    <string name="building_live_track">building live track elements…</string>
    <string name="ongoing_rsa">Ongoing RSA Request</string>
    <string name="please_wait_fobbu_msg">Please wait Fobbu,</string>
    <string name="gathering_tools__msg">is Gathering Tools</string>
    <string name="fobbu_on_way">is on his way please stay at your stranded location.</string>
    <string name="share_4_digit_code">Please share 4 digit code</string>
    <string name="code_validated">Code Validated!</string>
    <string name="fobbu_will_access_your_vehicle">Fobbu will now asses your\nvehicle issue.</string>
    <string name="fobbu_accesing_vehicle">Fobbu is assessing your vehicle.</string>
    <string name="add_money_fobbu_wallet">Add Money in Fobbu Wallet</string>
    <string name="share_your_rsa">Share your RSA</string>
    <string name="save_rs_50">save Rs 50 on your first order</string>
    <string name="vehicle_assessed">Vehicle Assessed!</string>
    <string name="complete_assessment">Fobbu has completed assessment\nof your vehicle.</string>
    <string name="building_work_order_summary">building work order summary…</string>
    <string name="work_summary">Work Summary</string>
    <string name="order_id">Order ID:</string>
    <string name="service_type">Service Type:</string>
    <string name="no_of_puncture">No of Punctures:</string>
    <string name="no_of_valve">No. of valve/s</string>
    <string name="no_of_tubes">No. of Tube/s</string>
    <string name="confirm_pay">Confirm &amp; Pay</string>
    <string name="payment_screen">Payment Screen</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="proceed_to_payment">proceeding to payment</string>
    <string name="get">GET</string>
    <string name="work_order_payment">Work order &amp; Make payment</string>
    <string name="set">SET</string>
    <string name="fobbu_setting_vehicle">Fobbu is setting up your vehicle.</string>
    <string name="go">GO</string>
    <string name="work_done">Work done, Vroom the road…</string>
    <string name="rate_review">Rate &amp; Review your experience</string>
    <string name="wonderful_blue">Wonderful</string>
    <string name="your_review_saved">Your review was saved. Share it with your friends!</string>
    <string name="skip_this_step">
        <u>Skip this step</u>
    </string>
    <string name="new_vehicle_added">A new vehicle has been added…</string>
    <string name="unlock_your_lsd">Unlock Your LSD\'s - I Bet you wont regret !</string>
    <string name="assured_cashback">Assured cashback offers</string>
    <string name="sos">SOS</string>
    <string name="tyre_1_fuel_petrol">1. Above is delivery charge for 4L of petrol.</string>
    <string name="tyre_2_fuel_petrol">2. 4L of petrol will be delivered on actual cost.</string>
    <string name="tyre_1_fuel_diesel">1. Above is delivery charge for 4L of diesel.</string>
    <string name="tyre_2_fuel_diesel">2. 4L of diesel will be delivered on actual cost.</string>
    <string name="tyre_3_fuel_diesel">3. Fobbu will click and upload your valid DL.</string>
    <string name="tyre_4_fuel_diesel">4. Fuel will be filled in front of you by Fobbu only.</string>
    <string name="full_name">Full Name</string>
    <string name="free_vehicle_wash">Free vehicle wash</string>
    <string name="learn_more">Learn More…</string>
    <string name="invite_friends_to_fobbu_once_they_sign_up_and_use_any_service_you_get_a_free_vehicle_wash">Invite
        friends to fobbu.Once they Signup and use any service you get a free Vehicle wash
    </string>
    <string name="invite_friends">Invite Friends</string>
    <string name="please_confirm_your_service_address">Please confirm your service Address:</string>
    <string name="change">Change</string>
</resources>