<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_transparent_back">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:src="@drawable/back_button"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/tvHeading"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_large"
            android:textColor="@color/red"
            android:layout_below="@+id/ivBack"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_below="@+id/rlTop"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/half_recatangle"
        android:textColor="@color/black"
        android:textSize="@dimen/login_textsize_medium"
        android:id="@+id/etFullName"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/etFullName"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="center"
        android:background="@drawable/half_recatangle"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/login_textsize_medium"
        android:maxLength="10"
        android:id="@+id/etMobile"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_below="@+id/etMobile"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:inputType="textEmailAddress"
        android:background="@drawable/half_recatangle"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/login_textsize_medium"
        android:id="@+id/etEmail"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="center"
        android:background="@drawable/half_recatangle"
        android:textColor="@color/black"
        android:singleLine="true"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="@dimen/login_textsize_medium"
        android:id="@+id/etPassword"
        android:padding="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@+id/etPassword"
        android:background="@drawable/border_line_grey"
        android:textSize="@dimen/login_textsize_medium"
        android:text="@string/selectGender"
        android:drawableRight="@drawable/dropdown"
        android:gravity="center"
        android:overlapAnchor="false"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:id="@+id/tvGender"/>

    <Spinner
        android:id="@+id/spinnerSelectGender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overlapAnchor="false"
        android:layout_alignBottom="@+id/tvGender"
        android:layout_alignLeft="@+id/tvGender"
        android:layout_alignStart="@+id/tvGender"
        android:layout_alignEnd="@+id/tvGender"
        android:layout_alignRight="@+id/tvGender"
        android:layout_alignTop="@+id/tvGender"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/tvStartFobbu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAlreadyRegistered"
        android:text="@string/start_your_fobbu"
        android:textSize="@dimen/login_textsize_medium"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/red_rounded_rectangle_padding"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_rect_rounded"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/already_registered"
        android:padding="10dp"
        android:singleLine="true"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/rlTerms"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvAlreadyRegistered"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/rlTerms"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_small"
            android:text="@string/by_signing_up"
            android:id="@+id/tvDefault"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/tvTerms"
            android:layout_marginLeft="3dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvDefault"
            android:textSize="@dimen/textsize_small"
            android:text="@string/terms_of_service"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlLoader"
            android:visibility="gone"
            android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_centerInParent="true"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallScaleMultipleIndicator" />

    </RelativeLayout>

</RelativeLayout>