<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_above="@+id/tvTextHeading"
            android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/tvTextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvTextFullForm"
            android:gravity="center"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_large"
            android:text="@string/rsa"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/tvTextFullForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvText"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/rsa_fullform"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvTryFobbu"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="@dimen/textsize_medium"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:text="@string/rsa_tutorial_text"
            android:textColor="@color/colorPrimary"/>

    <TextView
            android:id="@+id/tvTryFobbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/circleIndicator"
            android:layout_centerHorizontal="true"
            android:text="@string/try_fobbu"
            android:textSize="@dimen/textsize_medium"
            android:padding="@dimen/red_rounded_rectangle_padding"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:singleLine="true"
            android:visibility="invisible"
            android:background="@drawable/red_rect_rounded"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"/>

    <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circleIndicator"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"/>

</RelativeLayout>