<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:background="@drawable/ods_dialog_drawable"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/tvHeaderDialogOds"
            android:textSize="@dimen/textsize_medium"
            android:textColor="@color/drawer_text_color"
            android:text="@string/please_confirm_your_service_address"
    />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/tvServiceAddress"
            android:layout_below="@+id/tvHeaderDialogOds"
            android:textSize="@dimen/textsize_small"
            android:textColor="@color/drawer_text_color"
            android:gravity="center"
    />

    <LinearLayout
            android:layout_below="@id/tvServiceAddress"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <TextView
                android:text="@string/change"
                android:padding="12dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/blue_ods_rect"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/tvChange"
                android:layout_height="wrap_content"
        />

        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/confirm"
                android:padding="12dp"
                android:id="@+id/tvConfirm"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/red_ods_rect"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
        />

    </LinearLayout>

</RelativeLayout>