<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_transparent_back"
        tools:ignore="MissingDefaultResource">


    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/back_button"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/tvLogin"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_large"
            android:textColor="@color/red"
            android:layout_below="@+id/ivBack"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:layout_below="@+id/rlTop"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:background="@drawable/half_recatangle"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="10"
            android:gravity="center"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:textColor="@color/black"
            android:textSize="@dimen/login_textsize_medium"
            android:id="@+id/etMobile"
            android:padding="10dp"
            android:importantForAutofill="no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/etMobile"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/half_recatangle"
        android:singleLine="true"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="@dimen/login_textsize_medium"
        android:id="@+id/etPassword"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/tvStartFobbu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvForgotPassword"
        android:text="@string/start_your_fobbu"
        android:textSize="@dimen/login_textsize_medium"
        android:gravity="center"
        android:padding="@dimen/red_rounded_rectangle_padding"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_rect_rounded"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/forgot_password_ques"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvForgotPassword"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlLoader"
            android:visibility="gone"
            android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_centerInParent="true"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallScaleMultipleIndicator" />

    </RelativeLayout>

</RelativeLayout>